Made new document to brainstorm text for each slide of Dangers of Road. Worked on making reducing nav bar length. Noticed issues with nav on Chrome and IE browser, it looks like the Nav isn't properly aligned.

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header {
   position: relative;
   margin: 0 auto;
   width: 100%;
+  height: 4em;
   display: flex;
   justify-content: space-between;
 }
@@ -66,6 +67,7 @@ header {
   font-size: 1.5em;
   color: dimgrey;
   margin: 1em;
+  margin-bottom: 0.5em;
   transition: font-size 1s ease;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
